--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-bootstrap": "^0.28.5",
     "react-dom": "^15.0.1",
     "react-komposer": "^1.8.0",
-    "react-mounter": "^1.2.0"
+    "react-mounter": "^1.2.0",
+    "tracker-component": "^1.3.16"
   }
 }
